# dice-reader

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  dice-reader.c
